apps/production/prefect/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prefect-vpn-whitelist
spec:
  ipWhiteList:
    sourceRange:
      - "130.73.0.0/16"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prefect-server
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prefect.portal.mardi4nfdi.de`)
      kind: Rule
      middlewares:
        - name: prefect-vpn-whitelist
      services:
        - name: prefect-server
          port: server-svc-port
